--- a/StoreInventory/appsettings.json
+++ b/StoreInventory/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings":{
+    "ToejConnection": "Server=LAPTOP-Q3DU166Q;Database=StoreInventory;Trusted_Connection=True;MultipleActiveResultSets=True"
+  }
 }
