GearHostConnection added. DB updated. All data in tjhe cloud db for now

--- a/StoreInventory/appsettings.json
+++ b/StoreInventory/appsettings.json
@@ -7,7 +7,9 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings":{
-    "ToejConnection": "Server=LAPTOP-Q3DU166Q;Database=StoreInventory;Trusted_Connection=True;MultipleActiveResultSets=True"
+  "ConnectionStrings": {
+    "ToejConnection": "Server=LAPTOP-Q3DU166Q;Database=StoreInventory;Trusted_Connection=True;MultipleActiveResultSets=True",
+    "GearHostConnection": "Server=den1.mssql7.gear.host;Initial Catalog=Toejsrus;Persist Security Info=False;User ID=toejsrus;Password=Zx322?h6dg-9;MultipleActiveResultSets=True"
+
   }
 }
